--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@
   border: 4px solid orchid;
 }
 
+input.jsmind-editor {
+  /*padding: 0;*/
+}
+
 /*
  * Released under BSD License
  * Copyright (c) 2014-2015 hizzgdev@163.com
