--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ jmnodes {
 jmnode {
   position: absolute;
   cursor: default;
-  max-width: 400px;
+  /*max-width: 400px;*/
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
