--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,9 @@ jmnode {
   position: relative;
   overflow: auto;
   width: 100%;
-  /*height: 100%;*/
+  height: 100%;
 } /*box-shadow:0 0 2px #000;*/
+
 .jsmind-inner {
   moz-user-select: -moz-none;
   -moz-user-select: none;
