--- a/styles.css
+++ b/styles.css
@@ -5,20 +5,6 @@
   height: 100%;
 }
 
-/*#mindcheese_container .mindcheese-inner {*/
-/*  border: 4px solid red;*/
-/*}*/
-/*#mindcheese_container canvas {*/
-/*  border: 4px solid darkgreen;*/
-/*}*/
-/*#mindcheese_container mcnodes {*/
-/*  border: 4px solid orchid;*/
-/*}*/
-
-/*textarea.mindcheese-editor {*/
-/*  !*padding: 0;*!*/
-/*}*/
-
 canvas.mindcheese-draggable {
   vertical-align: top;
 }
@@ -45,7 +31,7 @@ mcnode {
   overflow: auto;
   width: 100%;
   height: 100%;
-} /*box-shadow:0 0 2px #000;*/
+}
 
 .mindcheese-inner {
   moz-user-select: -moz-none;
@@ -57,11 +43,6 @@ mcnode {
   user-select: none;
 }
 
-/* z-index:1 */
-svg.mindCheese {
-  position: absolute;
-  z-index: 1;
-}
 canvas.mindCheese {
   position: absolute;
   z-index: 1;
@@ -101,8 +82,8 @@ mcnode {
   padding: 10px;
   background-color: #fff;
   color: #333;
-  border-radius: 5px;
-  box-shadow: 1px 1px 1px #666;
+  border-radius: 2px;
+  /*box-shadow: 0px 0px 1px #666;*/
   font: 16px/1.125 Verdana, Arial, Helvetica, sans-serif;
 }
 mcnode:hover {
@@ -137,295 +118,21 @@ mcexpander:hover {
 }
 /* primary theme */
 mcnodes.theme-primary mcnode {
-  background-color: #428bca;
-  color: #fff;
-  border-color: #357ebd;
+  background-color: white;
+  color: black;
+  /* TODO: render underline in canvas. */
+  border-bottom: 2px solid black;
 }
 mcnodes.theme-primary mcnode:hover {
-  background-color: #3276b1;
-  border-color: #285e8e;
 }
 mcnodes.theme-primary mcnode.selected {
-  background-color: #f1c40f;
-  color: #fff;
+  color: black;
 }
 mcnodes.theme-primary mcnode.root {
+  background-color: black;
+  color: white;
 }
 mcnodes.theme-primary mcexpander {
 }
 mcnodes.theme-primary mcexpander:hover {
-}
-
-/* warning theme */
-mcnodes.theme-warning mcnode {
-  background-color: #f0ad4e;
-  border-color: #eea236;
-  color: #fff;
-}
-mcnodes.theme-warning mcnode:hover {
-  background-color: #ed9c28;
-  border-color: #d58512;
-}
-mcnodes.theme-warning mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-warning mcnode.root {
-}
-mcnodes.theme-warning mcexpander {
-}
-mcnodes.theme-warning mcexpander:hover {
-}
-
-/* danger theme */
-mcnodes.theme-danger mcnode {
-  background-color: #d9534f;
-  border-color: #d43f3a;
-  color: #fff;
-}
-mcnodes.theme-danger mcnode:hover {
-  background-color: #d2322d;
-  border-color: #ac2925;
-}
-mcnodes.theme-danger mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-danger mcnode.root {
-}
-mcnodes.theme-danger mcexpander {
-}
-mcnodes.theme-danger mcexpander:hover {
-}
-
-/* success theme */
-mcnodes.theme-success mcnode {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
-  color: #fff;
-}
-mcnodes.theme-success mcnode:hover {
-  background-color: #47a447;
-  border-color: #398439;
-}
-mcnodes.theme-success mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-success mcnode.root {
-}
-mcnodes.theme-success mcexpander {
-}
-mcnodes.theme-success mcexpander:hover {
-}
-
-/* info theme */
-mcnodes.theme-info mcnode {
-  background-color: #5dc0de;
-  border-color: #46b8da;
-  color: #fff;
-}
-mcnodes.theme-info mcnode:hover {
-  background-color: #39b3d7;
-  border-color: #269abc;
-}
-mcnodes.theme-info mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-info mcnode.root {
-}
-mcnodes.theme-info mcexpander {
-}
-mcnodes.theme-info mcexpander:hover {
-}
-
-/* greensea theme */
-mcnodes.theme-greensea mcnode {
-  background-color: #1abc9c;
-  color: #fff;
-}
-mcnodes.theme-greensea mcnode:hover {
-  background-color: #16a085;
-}
-mcnodes.theme-greensea mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-greensea mcnode.root {
-}
-mcnodes.theme-greensea mcexpander {
-}
-mcnodes.theme-greensea mcexpander:hover {
-}
-
-/* nephrite theme */
-mcnodes.theme-nephrite mcnode {
-  background-color: #2ecc71;
-  color: #fff;
-}
-mcnodes.theme-nephrite mcnode:hover {
-  background-color: #27ae60;
-}
-mcnodes.theme-nephrite mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-nephrite mcnode.root {
-}
-mcnodes.theme-nephrite mcexpander {
-}
-mcnodes.theme-nephrite mcexpander:hover {
-}
-
-/* belizehole theme */
-mcnodes.theme-belizehole mcnode {
-  background-color: #3498db;
-  color: #fff;
-}
-mcnodes.theme-belizehole mcnode:hover {
-  background-color: #2980b9;
-}
-mcnodes.theme-belizehole mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-belizehole mcnode.root {
-}
-mcnodes.theme-belizehole mcexpander {
-}
-mcnodes.theme-belizehole mcexpander:hover {
-}
-
-/* wisteria theme */
-mcnodes.theme-wisteria mcnode {
-  background-color: #9b59b6;
-  color: #fff;
-}
-mcnodes.theme-wisteria mcnode:hover {
-  background-color: #8e44ad;
-}
-mcnodes.theme-wisteria mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-wisteria mcnode.root {
-}
-mcnodes.theme-wisteria mcexpander {
-}
-mcnodes.theme-wisteria mcexpander:hover {
-}
-
-/* asphalt theme */
-mcnodes.theme-asphalt mcnode {
-  background-color: #34495e;
-  color: #fff;
-}
-mcnodes.theme-asphalt mcnode:hover {
-  background-color: #2c3e50;
-}
-mcnodes.theme-asphalt mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-asphalt mcnode.root {
-}
-mcnodes.theme-asphalt mcexpander {
-}
-mcnodes.theme-asphalt mcexpander:hover {
-}
-
-/* orange theme */
-mcnodes.theme-orange mcnode {
-  background-color: #f1c40f;
-  color: #fff;
-}
-mcnodes.theme-orange mcnode:hover {
-  background-color: #f39c12;
-}
-mcnodes.theme-orange mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-orange mcnode.root {
-}
-mcnodes.theme-orange mcexpander {
-}
-mcnodes.theme-orange mcexpander:hover {
-}
-
-/* pumpkin theme */
-mcnodes.theme-pumpkin mcnode {
-  background-color: #e67e22;
-  color: #fff;
-}
-mcnodes.theme-pumpkin mcnode:hover {
-  background-color: #d35400;
-}
-mcnodes.theme-pumpkin mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-pumpkin mcnode.root {
-}
-mcnodes.theme-pumpkin mcexpander {
-}
-mcnodes.theme-pumpkin mcexpander:hover {
-}
-
-/* pomegranate theme */
-mcnodes.theme-pomegranate mcnode {
-  background-color: #e74c3c;
-  color: #fff;
-}
-mcnodes.theme-pomegranate mcnode:hover {
-  background-color: #c0392b;
-}
-mcnodes.theme-pomegranate mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-pomegranate mcnode.root {
-}
-mcnodes.theme-pomegranate mcexpander {
-}
-mcnodes.theme-pomegranate mcexpander:hover {
-}
-
-/* clouds theme */
-mcnodes.theme-clouds mcnode {
-  background-color: #ecf0f1;
-  color: #333;
-}
-mcnodes.theme-clouds mcnode:hover {
-  background-color: #bdc3c7;
-}
-mcnodes.theme-clouds mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-clouds mcnode.root {
-}
-mcnodes.theme-clouds mcexpander {
-}
-mcnodes.theme-clouds mcexpander:hover {
-}
-
-/* asbestos theme */
-mcnodes.theme-asbestos mcnode {
-  background-color: #95a5a6;
-  color: #fff;
-}
-mcnodes.theme-asbestos mcnode:hover {
-  background-color: #7f8c8d;
-}
-mcnodes.theme-asbestos mcnode.selected {
-  background-color: #11f;
-  color: #fff;
-}
-mcnodes.theme-asbestos mcnode.root {
-}
-mcnodes.theme-asbestos mcexpander {
-}
-mcnodes.theme-asbestos mcexpander:hover {
 }
