customize the textarea's scaling

--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ canvas.mindcheese-draggable {
 textarea.mindcheese-editor {
   max-width: 380px;
   font-size: 21px;
+  line-height: 1.3;
+  resize: none;
 }
 mcnode {
   max-width: 400px;
