better textarea style

--- a/styles.css
+++ b/styles.css
@@ -17,8 +17,10 @@ canvas.mindcheese-draggable {
 }
 
 textarea.mindcheese-editor {
+  padding: 10px;
   max-width: 380px;
-  font-size: 21px;
+  font: 16px/1.125 Verdana, Arial, Helvetica, sans-serif;
+  border-width: 0;
   line-height: 1.3;
   resize: none;
   outline: none; /* remove the border */
