--- a/styles.css
+++ b/styles.css
@@ -129,25 +129,53 @@ mcnode code {
 }
 
 /* primary theme */
-mcnodes.theme-primary mcnode {
+div.theme-primary mcnode {
   background-color: white;
   color: black;
 }
 
-mcnodes.theme-primary mcnode:hover {
+div.theme-primary mcnode:hover {
 }
 
-mcnodes.theme-primary mcnode.selected {
+div.theme-primary mcnode.selected {
   color: black;
 }
 
-mcnodes.theme-primary mcnode.root {
+div.theme-primary mcnode.root {
   background-color: black;
   color: white;
 }
 
-mcnodes.theme-primary mcexpander {
+div.theme-primary mcexpander {
 }
 
-mcnodes.theme-primary mcexpander:hover {
+div.theme-primary mcexpander:hover {
+}
+
+/* dark theme */
+div.theme-dark {
+  background-color: rgb(74,89,99);
+}
+
+div.theme-dark mcnode {
+  background-color: rgb(74,89,99);
+  color: white;
+}
+
+div.theme-dark mcnode:hover {
+}
+
+div.theme-dark mcnode.selected {
+  color: white;
+}
+
+div.theme-dark mcnode.root {
+  background-color: white;
+  color: black;
+}
+
+div.theme-dark mcexpander {
+}
+
+div.theme-dark mcexpander:hover {
 }
