Change class name:
    -canvas.mindCheese {
    +canvas.mindcheese-graph-canvas {

--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ mcnode {
   user-select: none;
 }
 
-canvas.mindCheese {
+canvas.mindcheese-graph-canvas {
   position: absolute;
   z-index: 1;
 }
