--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,31 @@ mcexpander {
   cursor: pointer;
   border-color: gray;
 }
+mcexpander:hover {
+  border-color: #000;
+}
+
+
+mcadder {
+  position: absolute;
+  width: 11px;
+  height: 11px;
+  display: block;
+  overflow: hidden;
+  line-height: 12px;
+  font-size: 12px;
+  text-align: center;
+  border-radius: 2px;
+  border-width: 1px;
+  border-style: solid;
+  cursor: pointer;
+  color: #4a5963;
+  border-color: #cccccc;
+}
+mcadder:hover {
+  color: #000000;
+  border-color: #000;
+}
 
 /* default theme */
 
@@ -77,10 +102,6 @@ mcnode.root {
 
 mcnode.root.selected {
   box-shadow: 2px 2px 8px #000;
-}
-
-mcexpander:hover {
-  border-color: #000;
 }
 
 mcnode code {
