--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,11 @@ mcnode {
   background-color: #fff;
   color: #333;
   border-radius: 2px;
-  font: 16px/1.125 Verdana, Arial, Helvetica, sans-serif;
+  font:
+    16px/1.125 Verdana,
+    Arial,
+    Helvetica,
+    sans-serif;
 }
 
 /* important section */
